fix: add api get seller's items; modify create and update
