# src/docs/swagger.json
@@ -204,6 +204,38 @@
                 }
             }
         },
+        "/api/commodity/data": {
+            "get": {
+                "description": "获取自己的商品",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Item"
+                ],
+                "summary": "获取自己的商品",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.CommodityItem"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/common.HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/commodity/item": {
             "put": {
                 "description": "更新商品",
@@ -1526,6 +1558,9 @@
                 },
                 "price": {
                     "type": "number"
+                },
+                "seller_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -1548,6 +1583,7 @@
             "required": [
                 "commodity_item_id",
                 "item_name",
+                "platform_id",
                 "price"
             ],
             "properties": {
@@ -1557,8 +1593,14 @@
                 "item_name": {
                     "type": "string"
                 },
+                "platform_id": {
+                    "type": "integer"
+                },
                 "price": {
                     "type": "number"
+                },
+                "seller_id": {
+                    "type": "integer"
                 }
             }
         },
